Wed Mar 21 10:20:08 2001  Gary Wong  <gtw@research.att.com>

	* credits.sh, credits.sh: New files.
	* show.c (CommandShowEngine, CommandShowVersion): New functions.
	* gtkgame.c (GTKShowVersion): New function.

Tue Mar 20 10:15:02 2001  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (GTKDelay): Fix stupid bug in yesterday's delay code.

Mon Mar 19 10:48:53 2001  Gary Wong  <gtw@research.att.com>

	* gnubg.gtkrc: New file.

	* dice.c: Use /dev/urandom rather than /dev/random.

	* eval.c (PathOpen): Add a flags parameter, so that callers can ask
	for binary mode on non-POSIX systems.  All callers changed.

	* gnubg.c (CommandSaveSettings): Save more settings.

	* guile.c (classify_position): New function.
	* gnubg.scm (pip-count): New function.

	* gtkboard.c (board_label_chequers): New function.

	* gtkboard.c (board_draw_labels): New function.

	* gtkgame.c (EnterCommand, SaveWeights, SetRollouts, GTKDelay): New 
	functions.
	
	* set.c (CommandSetRolloutSeed): New function.
	* rollout.c (Rollout): Use specified seed.
	
Fri Mar 16 10:18:26 2001  Gary Wong  <gtw@research.att.com>

	* set.c (CommandSetTrainingThreshold): New function.
	* show.c (CommandShowTraining): New function.
	* gtkgame.c (SetAlpha, SetAnneal, SetThreshold): New functions.

Thu Mar 15 10:48:53 2001  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (GTKShowMatchEquityTable): Use a GtkSheet (from
	GtkExtra), if available.
	
	* show.c (CommandShowGammonPrice): Complain if no game is being
	played.

Wed Mar 14 17:33:25 2001  Gary Wong  <gtw@research.att.com>

	* external.c (CommandExternal): Make sure we unlink() the socket.

	* gtkgame.c (LoadCommands): New function.

	* gtkgame.c (GTKShowMatchEquityTable): New function.
	* matchequity.c: Keep the match equity table titles in an array.
	* show.c (CommandShowMatchEquityTable): Read the table title from
	that array.

	* gtkboard.c (board_set): Add extra redraws to workaround cosmetic
	problems when running under Wine.
