@@ -1,3 +1,10 @@
+Thu Mar 22 14:26:44 2001  Gary Wong  <gtw@research.att.com>
+
+	* gtkboard.c (board_pointer): Ignore subsequent button presses
+	once we're dragging.
+
+	* play.c (ApplyMoveRecord): Update the off-board dice, if using GTK.
+
 Wed Mar 21 10:20:08 2001  Gary Wong  <gtw@research.att.com>
 
 	* credits.sh, credits.sh: New files.
